--- a/src/templates/pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
+++ b/src/templates/pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
@@ -177,7 +177,7 @@ block content
 													+e.A.element(href='img/content/white-cup-1_lg.png' data-fancybox='white-cups')
 														+e.BUTTON.btn._sm(type='button')
 															+icon('icon-loupe','zoom__btn-icon')
-														+e.img.IMG(src='img/content/white-cup-1.jpg')
+														+e.img.IMG(src='img/content/white-cup-1.png')
 												+b.zoom.price-table__view-item
 													+e.A.element(href='img/content/white-cup-2_lg.png' data-fancybox='white-cups')
 														+e.BUTTON.btn._sm(type='button')
@@ -434,7 +434,7 @@ block content
 													| + ленточка или шнурок.
 											+e.view._paper-packs
 												+b.zoom.price-table__view-item
-													+e.A.element(href='img/content/paper-package-cups.jpg' data-fancybox='paper-pack')
+													+e.A.element(href='img/content/paper-package-cups_lg.jpg' data-fancybox='paper-pack')
 														+e.BUTTON.btn._sm._color._top(type='button')
 															+icon('icon-loupe','zoom__btn-icon')
 														+e.img.IMG(src='img/content/paper-package-cups.jpg')
@@ -764,7 +764,7 @@ block content
 												| нарядных лент
 								+e.col
 									+b.zoom.overview__item
-										+e.element.A(href='img/content/package-3_lg.jpg' data-fancybox='present-pack')
+										+e.element.A(href='img/content/overview-2_lg.jpg' data-fancybox='present-pack')
 											+e.img.IMG(src='img/content/overview-2.jpg')
 											+e.BUTTON(type='button').btn._top-rc
 												+icon('icon-loupe','zoom__btn-icon')
@@ -775,18 +775,18 @@ block content
 											+e.BUTTON(type='button').btn._top-rc
 												+icon('icon-loupe','zoom__btn-icon')
 									+b.zoom.overview__item
-										+e.element.A(href='img/content/package-5_lg.jpg' data-fancybox='present-pack')
+										+e.element.A(href='img/content/overview-4_lg.jpg' data-fancybox='present-pack')
 											+e.img.IMG(src='img/content/overview-4.jpg')
 											+e.BUTTON(type='button').btn._top-rc
 												+icon('icon-loupe','zoom__btn-icon')
 								+e.col
 									+b.zoom.overview__item
-										+e.element.A(href='img/content/package-5_lg.jpg' data-fancybox='present-pack')
+										+e.element.A(href='img/content/overview-5_lg.jpg' data-fancybox='present-pack')
 											+e.img.IMG(src='img/content/overview-5.jpg')
 											+e.BUTTON(type='button').btn._top-rc
 												+icon('icon-loupe','zoom__btn-icon')
 									+b.zoom.overview__item
-										+e.element.A(href='img/content/package-5_lg.jpg' data-fancybox='present-pack')
+										+e.element.A(href='img/content/overview-6_lg.jpg' data-fancybox='present-pack')
 											+e.img.IMG(src='img/content/overview-6.jpg')
 											+e.BUTTON(type='button').btn._top-rc
 												+icon('icon-loupe','zoom__btn-icon')
