--- a/src/sass/pages/_cups.sass
+++ b/src/sass/pages/_cups.sass
@@ -511,10 +511,9 @@
 		&_highlight
 			color: #ed0000
 	&__label
-		max-width: 310px
 		margin: 0 auto 10px
-		display: block
-		padding: 5px
+		display: inline-block
+		padding: 5px 20px
 		background: #ebf8ff
 		&_color
 			background: #fff9c4
