--- a/src/sass/pages/_cups.sass
+++ b/src/sass/pages/_cups.sass
@@ -516,14 +516,25 @@
 		padding: 5px 20px
 		background: #ebf8ff
 		&_color
+			padding: 4px 25px
 			background: #fff9c4
-		&_width
-			max-width: 920px
-			margin: 0 auto 10px
+			&-xs
+				padding: 7px 8px
+				background: #fff9c4
+			&-md
+				padding: 5px 20px
+				max-width: 307px
+				background: #fff9c4
 		&_sm
-			max-width: 274px
+			padding: 5px 29px
+		&_md
+			padding: 6px 10px
+			max-width: 315px
 		&_full
 			max-width: 333px
+			padding: 6px 15px
+		&_width
+			padding: 11px 24px
 	&__link
 		display: inline-block
 		margin: 20px 0 10px
