--- a/src/templates/pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
+++ b/src/templates/pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
@@ -298,7 +298,7 @@ block content
 
 									+e.TR
 										+e.TD
-											+e.MARK.label._color
+											+e.MARK.label._color-xs
 												+e.STRONG Золотые и серебряные кружки
 											+e.view
 												+b.zoom.price-table__view-item._half
@@ -428,7 +428,7 @@ block content
 								+e.TBODY.body
 									+e.TR
 										+e.TD
-											+e.MARK.label
+											+e.MARK.label._md
 												+e.STRONG Упаковка в обёрточную бумагу
 													+e.BR
 													| + ленточка или шнурок.
@@ -454,7 +454,7 @@ block content
 
 									+e.TR
 										+e.TD
-											+e.MARK.label._color
+											+e.MARK.label._color-md
 												+e.STRONG Подарочные упаковки,
 												= ' '
 												| есть еще различные варианты...
