--- a/src/templates/pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
+++ b/src/templates/pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
@@ -168,7 +168,7 @@ block content
 								+e.TBODY.body
 									+e.TR
 										+e.TD
-											+e.MARK.label._sm
+											+e.MARK.label
 												+e.STRONG Печать на класических
 													+e.BR
 													| белых кружках
