--- a/src/sass/pages/_cups.sass
+++ b/src/sass/pages/_cups.sass
@@ -467,8 +467,6 @@
 		font-family: Arial, sans-serif
 		line-height: 1.2
 		+md
-			font-size: 15px
-		+sm
 			font-size: 14px
 		td
 			vertical-align: middle
@@ -528,6 +526,9 @@
 		&_md
 			padding: 6px 10px
 			max-width: 315px
+			+md
+				padding: 6px
+		
 		&_full
 			max-width: 333px
 			padding: 6px 15px
